Fix padding, margin and spacing issues

--- a/homebodies/style-2.css
+++ b/homebodies/style-2.css
@@ -56,42 +56,40 @@ body {
 	background-position: center;
 	background-blend-mode: multiply;
 	font-family: Monaco;
-	letter-spacing: 0.07em;
+	letter-spacing: 0.03em;
 	line-height: 1.3;
 	color: #eae8db;
 }
 
-.logo, header nav {
-	display: inline-block;
-}
-
-.logo {
-	max-width: 200px;
+.logo img {
+	padding: 15px 15px 0 15px;
+	max-width: 100%;
 }
 
 nav a {
-	/*padding: 40px;*/
+	padding-left: 15px;
 	text-decoration: none;
-	margin-bottom: 20px;
 	color: #eae8db;
 }
 
-.intro-img {
-	max-width: 300px;
-	display: inline-block;
-	float: left;
-	margin-right: 20px;
-	margin-bottom: 10px;
+main {
+	margin-top: 10px;
+}
+
+.intro-img img {
+	padding-right: 15px;
+	max-width: 90vw;
 }
 
 .intro {
-	margin-top: 50px;	
-	font-size: 24px;
+	font-size: 18px;
 	padding: 15px;
+	text-align: justify;
 }
 
-.outro-img {
-	max-width: 275px;
+.outro-img img {
+	padding-right: 15px;
+	max-width: 90vw;
 }
 
 .inner-column {
@@ -114,16 +112,20 @@ nav a {
 
 .contact {
 	padding: 15px;
+	text-align: justify;
+}
+
+.contact ul {
+	padding-top: 15px;
 }
 
 h1 {
 	padding: 15px 0;
-	font-size: 42px;
+	font-size: 34px;
 }
 
-img {
+li img {
 	max-width: 250px;
-	padding: 5px;
 }
 
 .gallery {
@@ -133,9 +135,48 @@ img {
 }
 
 footer, nav + p {
-	margin: 40px;
+	margin: 20px;
 }
 
 p + p {
 	padding-top: 18px;
 }
+
+/*FLEX BOX LAYOUT*/
+
+.site-header {
+	display: flex;
+	flex-direction: column;
+	/*align-items: center;*/
+	gap: 10px;
+}
+
+/*header div {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}*/
+
+main div {
+	display: flex;
+	flex-direction: column;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
